instalaçao e cofiguraçao do devise
instalou o devise e devise_i18n
foi acrescentado os campos name, username na migrate do devise
foi adicionado validates no model user
adicionado rotina no controler application_controller para mostrar as chaves name e username no sing_up

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,11 +1,20 @@
 pt-BR:
   activerecord:
+    model:
+      user: 'Usuário'
     attributes:
       default: &default
         create_at: 'Criado em'
         update_at: 'Atualizado em'
      
-        post:
+      post:
         <<: *default
         description: 'Descrição'
         photo: 'Foto'
+      
+      user:
+        <<: *default
+        name: 'Nome'
+        email: 'Email'
+        password: 'Senha'
+        password_confirmation: 'Senha (Confirmaçao)'
