--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -18,3 +18,9 @@ pt-BR:
         email: 'Email'
         password: 'Senha'
         password_confirmation: 'Senha (Confirmaçao)'
+
+  errors:
+    messages:
+      # Active Storage Validations
+      content_type_invalid: 'é um tipo de arquivo inválido'
+      file_size_out_of_range: 'tem %{file_size} mas o limite é 5 MB'  
