implementado comentarios     usado websocket para os comentarios e os posts

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -2,6 +2,7 @@ pt-BR:
   activerecord:
     models:
       user: 'Usuário'
+      comment: 'Comentário'
     attributes:
       default: &default
         create_at: 'Criado em'
@@ -11,6 +12,10 @@ pt-BR:
         <<: *default
         description: 'Descrição'
         photo: 'Foto'
+
+      comment:
+        <<: *default 
+        body: 'Comentário' 
       
       user:
         <<: *default
